<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.themixednuts</groupId>
  <artifactId>GhidraMCP</artifactId>
  <packaging>jar</packaging>
  <version>0.5.0</version>
  <name>GhidraMCP</name>
  <description>A Ghidra extension implementing the Model Context Protocol (MCP) by running an embedded MCP server.</description>
  <url>https://github.com/themixednuts/GhidraMCP</url>

  <organization>
    <name>TheMixedNuts</name>
    <url>https://github.com/themixednuts</url>
  </organization>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.modelcontextprotocol.sdk</groupId>
        <artifactId>mcp-bom</artifactId>
        <version>0.17.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- Manage JUnit 5 version -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.12.2</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.12.2</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    
    <!-- Ghidra version configuration - single source of truth -->
    <ghidra.version>11.4.2</ghidra.version>
    <ghidra.release.date>20250826</ghidra.release.date>
    
    <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
    <!-- Add any necessary properties here -->
  </properties>

  <dependencies>
    <dependency>
      <groupId>io.modelcontextprotocol.sdk</groupId>
      <artifactId>mcp</artifactId>
    </dependency>

    <!-- Jackson JDK8 module for Optional support -->
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jdk8</artifactId>
      <version>2.19.0</version>
    </dependency>

    <!-- Ghidra JARs using file repository -->
    <dependency>
      <groupId>ghidra</groupId>
      <artifactId>Generic</artifactId>
      <version>${ghidra.version}</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/Generic.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>ghidra</groupId>
      <artifactId>SoftwareModeling</artifactId>
      <version>${ghidra.version}</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/SoftwareModeling.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>ghidra</groupId>
      <artifactId>Project</artifactId>
      <version>${ghidra.version}</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/Project.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>ghidra</groupId>
      <artifactId>Docking</artifactId>
      <version>${ghidra.version}</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/Docking.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>ghidra</groupId>
      <artifactId>Decompiler</artifactId>
      <version>${ghidra.version}</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/Decompiler.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>ghidra</groupId>
      <artifactId>Utility</artifactId>
      <version>${ghidra.version}</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/Utility.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>ghidra</groupId>
      <artifactId>Base</artifactId>
      <version>${ghidra.version}</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/Base.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>ghidra</groupId>
      <artifactId>Gui</artifactId>
      <version>${ghidra.version}</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/Gui.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>ghidra</groupId>
      <artifactId>MicrosoftCodeAnalyzer</artifactId>
      <version>${ghidra.version}</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/MicrosoftCodeAnalyzer.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>ghidra</groupId>
      <artifactId>MicrosoftDemangler</artifactId>
      <version>${ghidra.version}</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/MicrosoftDemangler.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>ghidra</groupId>
      <artifactId>MicrosoftDmang</artifactId>
      <version>${ghidra.version}</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/MicrosoftDmang.jar</systemPath>
    </dependency>


    <!-- Add the jakarta.servlet-api dependency -->
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <version>6.1.0</version>
    </dependency>

    <!-- Jetty Embedded Server Dependencies -->
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-server</artifactId>
      <version>12.0.21</version>
    </dependency>

    <dependency>
      <groupId>org.eclipse.jetty.ee10</groupId>
      <artifactId>jetty-ee10-servlet</artifactId>
      <version>12.0.21</version>
    </dependency>

    <!-- Other dependencies -->
    <dependency>
      <groupId>org.reflections</groupId>
      <artifactId>reflections</artifactId>
      <version>0.10.2</version>
      <scope>test</scope>
    </dependency>

    <!-- Add JUnit 5 dependencies (version/scope managed) -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- Mockito for mocking in tests -->
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>5.18.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>5.18.0</version>
      <scope>test</scope>
    </dependency>

    <!-- JUnit Platform Suite for test suites -->
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-suite-api</artifactId>
      <version>1.12.2</version>
      <scope>test</scope>
    </dependency>
    
    <!-- JSON Schema validator for headless test framework -->
    <dependency>
      <groupId>com.github.erosb</groupId>
      <artifactId>everit-json-schema</artifactId>
      <version>1.14.6</version>
      <scope>test</scope>
    </dependency>
    
    <!-- JSON library for schema validation -->
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20250517</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <!-- Use custom MANIFEST.MF -->
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <archive>
            <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
          </archive>
          <!-- Set a fixed name for the JAR without version -->
          <finalName>GhidraMCP</finalName>
          <!-- Exclude the App class -->
          <excludes>
            <exclude>**/App.class</exclude>
          </excludes>
          <!-- Make sure output directory is target for consistency -->
          <outputDirectory>${project.build.directory}</outputDirectory>
        </configuration>
      </plugin>

      <!-- The Assembly Plugin for creating the Ghidra extension ZIP -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.3.0</version>

        <executions>
          <execution>
            <id>make-extension</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <descriptors>
                <descriptor>src/assembly/ghidra-extension.xml</descriptor>
              </descriptors>
              <finalName>GhidraMCP-${project.version}</finalName>
              <appendAssemblyId>false</appendAssemblyId>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Copy dependencies to target/lib for the assembly -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.1.2</version>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
              <includeScope>runtime</includeScope>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>
      <!-- Exec plugin for running test config generator -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <mainClass>com.themixednuts.TestConfigGenerator</mainClass>
          <classpathScope>test</classpathScope>
        </configuration>
      </plugin>
      
      <!-- Surefire plugin: exclude headless tests (they run in Ghidra, not JUnit) -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <excludes>
            <exclude>**/headless/**</exclude>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
  <profiles>
    <profile>
      <id>ci-tests</id>
      <activation>
        <property>
          <name>env.CI</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
            <executions>
              <execution>
                <id>make-test-jar</id>
                <phase>package</phase>
                <goals>
                  <goal>single</goal>
                </goals>
                <configuration>
                  <descriptors>
                    <descriptor>src/test/assembly/test-jar-with-dependencies.xml</descriptor>
                  </descriptors>
                  <attach>false</attach>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
